--- a/Test.tex
+++ b/Test.tex
@@ -2,6 +2,9 @@
 
 
 \begin{document}
+\title{Test}
+\author{Simcha van Helvoort}
+\maketitle{}
 Hello World!\\
 De hexapod van Moog heeft een afwijking in de actuators van -5 tot 5mm.
 \end{document}
