--- a/Test.tex
+++ b/Test.tex
@@ -1,10 +1,19 @@
 \documentclass[11pt]{article}
+\usepackage{amsmath}
 
 
 \begin{document}
-\title{Test}
+\title{Engineering week 3 opgaven}
 \author{Simcha van Helvoort}
 \maketitle{}
-Hello World!\\
-De hexapod van Moog heeft een afwijking in de actuators van -5 tot 5mm.
+Dit zijn de antwoorden van Engineering week 3 voor het oefenen van mijn LaTeX skills.
+
+\newpage
+
+\section{opgave 1}
+
+$-\dfrac{d^2u}{dx^2} = 1 = f(x) = f_{\Omega}$ met $x \in (0, 1)$ \\
+$u(0) = 1$ \\
+$\dfrac{d^2u}{dx^2}$
+
 \end{document}
